--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,16 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.0.27/css/bulma.min.css">
+  <style>
+     .box{
+       display: inline-block;
+       padding: 10px;
+       box-sizing: border-box;
+     }
+     .img-preview{
+       overflow: hidden;
+     }
+   </style>
 </head>
 <body>
   <div id="app"></div>
